The full event card is now shown when hovering over event cards in the player discard pile, event details, or in the right panel. Ensured that full event cards which appear near the bottom of the screen will never be partially off screen. EventCard objects are now attached to events which played an eventCard. City cards in the discard prompt no longer receive the 'target' cursor (clicking them does not locate the city -- it moves them between the 'keep' and 'discard' sections).

--- a/style.css
+++ b/style.css
@@ -929,6 +929,7 @@ span.r {color: #ef282a; background: none}
 .discardPrompt .playerCard
 {
 	margin-bottom: 3px;
+	cursor: pointer;
 }
 .discardSelections > p
 {
